--- a/KMSakura/App.xaml
+++ b/KMSakura/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="KMSakura.App"
+﻿<prism:PrismApplication x:Class="KMSakura.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KMSakura"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
          
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
